@@ -12,7 +12,7 @@ Interpolate 3D variables on hybrid model level to pressure or height level.
 The input file must contain the log. surface pressure or the surface pressure.
 To interpolate the temperature, the orography is also needed.
 The pressure, temperature, and orography are identified by there code numbers.
-Supported code tables are: WMO standard table number 2 and ECMWF local table number 128.
+Supported parameter tables are: WMO standard table number 2 and ECMWF local table number 128.
 Use the alias  ml2plx/ml2hlx or the environment variable EXTRAPOLATE
 to extrapolate missing values.
 @EndDescription
